# glue-framework

./: .gitignore  Agent Chat.md  Based on my analysis.md  CONTRIBUTING.md  PMC Protocol (Persistent Markdown Context).md  README.md  RFL prompt theory.md  ce3.py  cline to copilot.md  glue-dsl-concepts-2.md  glue_framework.code-workspace  new concepts.md  pyproject.toml  refactoring_progress.md  refactoring_summary.md  setup.py  test_checklist.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
archive/core/: simple_tool_binding.py
archive/tools/: base.py.bak  code_interpreter.py.bak  simple_base.py  simple_file_handler.py  simple_web_search.py
docs/: binding_system.md  chain_processing_analysis.md  dsl_revision.md  framework_comparison.md  gemini_insights_binding_patterns.md  magnetic_fields.md  magnetic_patterns.md  resource_system.md  search_providers.md
docs/SmolAgents/: BuildingGoodAgents.md  SmolAgents package help.md  SmolAgents tool module help.md  SmolAgentsToolDocs.md
docs/archive/: glue-dsl-concepts-3.md  glue-dsl-concepts.md
docs/devDocs/: futureFeatures.md
docs/framework/: 01_core_concepts.md  02_expression_language.md  03_tool_system.md  04_examples.md  05_best_practices.md  Fix Checklist.md  GLUEdocumentation.md  complete_system.md  deps.md  final_magnetic_solution.md  glue_workflow_proposal.md  smolagents_tool_enhancement.md  stablization plan.md  test_plan.md
examples/: code_generator.py  doc_generator.py  natural_tools.py  research_assistant.glue  research_assistant.py  research_assistant_poc.py  research_session.md  research_team.py
output/: note.txt
src/glue/: __init__.py  cli.py
src/glue/adhesive/: __init__.py  chain.py  tool.py
src/glue/agents/: test.py
src/glue/core/: __init__.py  adhesive.py  app.py  binding.py  cbm.py  cbm_coordinator.py  cbm_orchestrator.py  communication.py  context.py  conversation.py  debug.py  errors.py  feedback.py  group_chat.py  group_chat_flow.py  logger.py  mcp.py  mem0_manager.py  memory.py  model.py  model_pydantic.py  orchestrator.py  patterns.py  pydantic_models.py  registry.py  resource.py  role.py  simple_adhesive.py  simple_app.py  simple_binding.py  simple_conversation.py  simple_group_chat.py  simple_resource.py  state.py  team.py  team_communication.py  team_pydantic.py  tool_binding.py  types.py  workspace.py
src/glue/dsl/: __init__.py  environment.py  executor.py  keywords.py  parser.py
src/glue/experimental/: cbm_coordinator.py
src/glue/expressions/: __init__.py  chain.py  core.py
src/glue/magnetic/: __init__.py  field.py  field_pydantic.py  models.py  rules.py
src/glue/providers/: __init__.py  base.py  mock.py  openrouter.py  simple_base.py  smolagents.py
src/glue/tools/: __init__.py  base.py  chain.py  code_interpreter.py  dynamic_tool_factory.py  executor.py  file_handler.py  magnetic.py  mock_tools.py  simple_base.py  simple_code_interpreter.py  simple_magnetic.py  simple_web_search.py  web_search.py
src/glue/tools/search_providers/: __init__.py  base.py  serp.py
src/glue/tools/test_tool/: __init__.py
test_reports/magnetic/: magnetic_test_report_20241214_190628.txt  magnetic_test_report_20241214_192339.txt  magnetic_test_report_20241214_192453.txt  magnetic_test_report_20241214_192639.txt  magnetic_test_report_20241214_201851.txt  magnetic_test_report_20241214_202229.txt  magnetic_test_report_20241214_202515.txt  magnetic_test_report_20241214_202726.txt  magnetic_test_report_20241214_203507.txt  magnetic_test_report_20241214_203959.txt  magnetic_test_report_20241214_204255.txt  magnetic_test_report_20241214_205202.txt  magnetic_test_report_20241214_205447.txt  magnetic_test_report_20241214_205630.txt  magnetic_test_report_20241214_205855.txt  magnetic_test_report_20241214_210055.txt  magnetic_test_report_20241214_210559.txt  magnetic_test_report_20241215_002754.txt  magnetic_test_report_20241215_002859.txt  magnetic_test_report_20241215_003058.txt
tests/: conftest.py
tests/adhesive/: __init__.py  test_adhesive.py
tests/agents/: test_test.py
tests/core/: test_adhesive.py  test_binding.py  test_cbm.py  test_communication.py  test_communication_models.py  test_context_aware.py  test_conversation.py  test_dynamic_tools.py  test_magnetic_error_handling.py  test_magnetic_field.py  test_magnetic_field_pydantic.py  test_magnetic_patterns.py  test_mem0_integration.py  test_memory.py  test_model.py  test_model_pydantic.py  test_orchestration.py  test_orchestrator_models.py  test_prefect_tool_creation.py  test_prompt_routing.py  test_resource_system.py  test_smolagents_tools.py  test_team.py  test_team_communication_levels.py  test_team_magnetic_tools.py  test_team_pydantic.py  test_tool_execution.py  test_tool_system.py
tests/dsl/: __init__.py  test_binding_parser.py  test_keywords.py  test_parser.py
tests/expressions/: __init__.py  test_expressions.py
tests/integration/: test_dynamic_tool_creation.py  test_magnetic_field_integration.py  test_research_assistant.py  test_research_workflow.py
tests/magnetic/: __init__.py  run_tests.py  test_field.py  test_field_core.py  test_field_system.py  test_rules.py  test_workflow.py
tests/providers/: test_base.py  test_openrouter.py
tests/providers/fixtures/: provider_fixtures.py
tests/system/: test_research_assistant.py  test_research_assistant_system.py
tests/tools/: __init__.py  conftest.py  test_base.py  test_code_interpreter.py  test_code_interpreter_context.py  test_file_handler.py  test_magnetic.py  test_test_tool.py  test_tool_system.py  test_web_search.py
