[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glue"
version = "0.1.0"
authors = [
  { name="ParadiseLabs", email="paradiselabs.ai@gmail.com" },
]
description = "GLUE Framework for AI Development - Built with SmolAgents (https://github.com/huggingface/smolagents)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "smolagents>=1.4.1",  # Core agent framework - https://github.com/huggingface/smolagents
    "transformers>=4.0.0",  # For local model support
    "litellm>=1.0.0",      # For multiple model providers
    "mcp>=0.1.0",          # For MCP integration
    "loguru>=0.7.0",       # Enhanced logging
    "pytest>=7.0.0",       # For testing
    "pytest-asyncio>=0.21.0",  # For async test support
    "pytest-cov>=4.1.0"    # For test coverage
]

[project.urls]
"Homepage" = "https://github.com/paradiselabs-ai/glue-framework"
"Bug Tracker" = "https://github.com/paradiselabs-ai/glue-framework/issues"
"SmolAgents" = "https://github.com/huggingface/smolagents"  # Credit to core framework

[project.scripts]
glue = "glue.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=glue"  # Added coverage
asyncio_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["glue"]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
