[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glue"
version = "0.1.0"
authors = [
  { name="ParadiseLabs", email="paradiselabs.ai@gmail.com" },
]
description = "GLUE Framework for AI Development - Built with SmolAgents (https://github.com/huggingface/smolagents)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "smolagents>=1.4.1",  # Core agent framework - https://github.com/huggingface/smolagents
    "transformers>=4.0.0",  # For local model support
    "litellm>=1.0.0",      # For multiple model providers
    "mcp>=0.1.0",          # For MCP integration
    "loguru>=0.7.0",       # Enhanced logging
    "prefect>=2.14.0",     # For workflow orchestration
    "redis>=5.0.0",        # For caching and persistence
    "opentelemetry-sdk>=1.21.0",  # For telemetry
    "opentelemetry-exporter-otlp>=1.21.0",  # For telemetry export
    "typing-extensions>=4.0.0",  # For enhanced type hints
    "pytest>=7.0.0",       # For testing
    "pytest-asyncio>=0.21.0",  # For async test support
    "pytest-cov>=4.1.0",    # For test coverage
    "pytest-mock>=3.10.0",  # For mocking in tests
    "pytest-timeout>=2.1.0"  # For test timeouts
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "pytest-watch>=4.2.0"  # For test watching during development
]

[project.urls]
"Homepage" = "https://github.com/paradiselabs-ai/glue-framework"
"Bug Tracker" = "https://github.com/paradiselabs-ai/glue-framework/issues"
"SmolAgents" = "https://github.com/huggingface/smolagents"  # Credit to core framework

[project.scripts]
glue = "glue.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=glue"
asyncio_fixture_loop_scope = "function"
timeout = 300  # 5 minutes timeout for tests

[tool.coverage.run]
source = ["glue"]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
